Fix health check
